[package]
name = "workspacectl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wsctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
atomicwrites = "0.4.2"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
toml = { version = "0.8.2", features = ["parse", "display"] }
walkdir = "2.4.0"
